# python-docx

./: .fdignore  .gitattributes  .gitignore  .projections.json  .readthedocs.yaml  .rgignore  .travis.yml  CONTRIBUTORS.md  DESCRIPTION.rst  HISTORY.rst  LICENSE  MANIFEST.in  MODS.txt  Makefile  Questions bank  README.md  README.rst  Superkirana  create_docx.py  pyproject.toml  pyrightconfig.json  python_docx-0.8.7-py3-none-any.whl  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.py  test.py  tox.ini
.github/workflows/: codeql-analysis.yml  main.yml  makefile.yml  pythonpublish.yml
doc/: conf.py  index.rst
doc/developer/: index.rst
docs/: Makefile  conf.py  header_footer.rst  index.rst
docs/_templates/: sidebarlinks.html
docs/api/: comments.rst  dml.rst  document.rst  section.rst  settings.rst  shape.rst  shared.rst  style.rst  table.rst  text.rst
docs/dev/: design_narratives.rst  index.rst
docs/user/: api-concepts.rst  comments.rst  documents.rst  hdrftr.rst  install.rst  quickstart.rst  sections.rst  shapes.rst  styles-understanding.rst  styles-using.rst  styles.rst  tables.rst  text.rst
docx/: __init__.py  api.py  blkcntnr.py  bookmark.py  comments.py  compat.py  document.py  exc.py  exceptions.py  footer.py  header.py  header_footer.py  list.py  package.py  parts.py  runcntnr.py  section.py  settings.py  shading.py  shape.py  shared.py  table.py  text.py
docx/dml/: color.py
docx/enum/: __init__.py  base.py  dml.py  fields.py  header.py  header_footer.py  section.py  shading.py  shape.py  shared.py  style.py  table.py  text.py
docx/fntent/: endnoteReference.py  fntent.py  footnoteReference.py
docx/image/: __init__.py  bmp.py  constants.py  emf.py  exceptions.py  gif.py  helpers.py  image.py  jpeg.py  png.py  svg.py  tiff.py  wmf.py
docx/mixins/: PrMixin.py  ShdMixin.py
docx/opc/: appprops.py  compat.py  constants.py  coreprops.py  customprops.py  extendedprops.py  oxml.py  package.py  packuri.py  part.py  phys_pkg.py  pkgreader.py  pkgwriter.py  rel.py  shared.py  spec.py
docx/oxml/: __init__.py  appprops.py  base.py  base_complex_types.py  bookmark.py  comments.py  coreprops.py  field.py  (+23 more)
features/: add_paragraph.feature  api-add-heading.feature  api-add-page-break.feature  api-add-paragraph.feature  api-add-picture.feature  api-add-table.feature  api-open-document.feature  blk-add-paragraph.feature  blk-add-table.feature  blk-iter-inner-content.feature  bmk-bookmarks.feature  cel-add-table.feature  cel-merge.feature  cel-text.feature  cell-merge.feature  cmt-mutations.feature  cmt-props.feature  doc-access-collections.feature  doc-access-footnotes.feature  doc-access-sections.feature  doc-add-comment.feature  doc-add-heading.feature  doc-add-page-break.feature  doc-add-paragraph.feature  doc-add-picture.feature  doc-add-section.feature  doc-add-table.feature  doc-comments.feature  doc-coreprops.feature  doc-customprops.feature  doc-document.feature  doc-set-footnote-props.feature  doc-settings.feature  doc-styles.feature  dummy.feature  environment.py  ftr-access-props.feature  ftr-link-unlink.feature  hdr-access-props.feature  hdr-header-footer.feature  (+67 more)
notes_tests/: test_docx.py  test_docx_run.py
ref/: .swp  styles.xml
samples/: testaddemf.emf  testaddemf.py
tests/: conftest.py  test_api.py  test_blkcntnr.py  test_bookmark.py  test_comments.py  test_document.py  test_drawing.py  test_enum.py  test_footer.py  test_header.py  test_header_footer.py  test_package.py  test_parts.py  test_section.py  test_settings.py  test_shading.py  test_shape.py  test_shared.py  test_table.py  test_text.py  test_zero_dpi.py  unitdata.py  unitutil.py
(+526 files in other folders)
